--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="cell">Išlaidos</div>
                     <div class="cell">Balansas</div>
                 </div>
-                <div class="table-content">
+                <div class="table-content" id="content">
                     <div class="table-row">
                         <div class="cell">1</div>
                         <div class="cell">Sausis</div>
@@ -57,7 +57,7 @@
                         <div class="cell">150.00 Eur</div>
                     </div>
                 </div>
-                <div class="table-footer">
+                <div class="table-footer" id="footer">
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell">0.00 Eur</div>
@@ -72,23 +72,26 @@
         <div class="row">
             <div class="summary-list">
                 <div class="item">
-                    <div class="value">Mėnesio pavadinimas</div>
+                    <div class="value" id="value">Mėnesio pavadinimas</div>
                     <div class="title">mėnuo, kai buvo mažiausiai uždirbta,bet ne lygu nuliui</div>
                 </div>
                 <div class="item">
-                    <div class="value">Mėnesio pavadinimas</div>
+                    <div class="value"id="value2">Mėnesio pavadinimas</div>
                     <div class="title">mėnuo, kai buvo daugiausiai uždirbta</div>
                 </div>
                 <div class="item">
-                    <div class="value">Mėnesio pavadinimas</div>
+                    <div class="value"id="value3">Mėnesio pavadinimas</div>
                     <div class="title">mėnuo, kai buvo mažiausiai išlaidos, bet ne lygios nuliui</div>
                 </div>
                 <div class="item">
-                    <div class="value">Mėnesio pavadinimas</div>
+                    <div class="value"id="value4">Mėnesio pavadinimas</div>
                     <div class="title">mėnuo, kai buvo didžiausios išlaidos</div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="./js/data.js"></script>
+    <script src="./js/function.js"></script>
+    <script src="./js/action.js"></script>
 </body>
 </html>
